// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<button
  className="sc-bdVaJa cpLMZl"
  type="submit"
>
  Submit
</button>
`;

exports[`renders correctly with icon 1`] = `
<button
  className="sc-bdVaJa cpLMZl"
  type="submit"
>
  <div
    className="sc-bwzfXH hQQdbp"
  >
    Icon
  </div>
  Submit
</button>
`;
